--- a/index.html
+++ b/index.html
@@ -14,5 +14,28 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div style="width: 50%; padding: 4rem">
+      <div class="plan">
+        <div class="card card_secondary">
+          <header class="card_header">
+            <h3 class="plan_name">Entry</h3>
+            <span class="plan_price">$14</span>
+            <span class="plan_duration">/month</span>
+            <span class="badge badge_secondary badge_small">10% off</span>
+            <span class="plan_description">Easy start on the cloud</span>
+          </header>
+          <div class="card_body">
+            <ul class="list list_tick">
+              <li class="list_item">Unlimited websites</li>
+              <li class="list_item">Unlimited Bandwidth</li>
+              <li class="list_item">100 Gb SSD storage</li>
+              <li class="list_item">3 GB RAM</li>
+            </ul>
+            <button class="button button_outline button_block">buy now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
