--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Deploy your websites in less than 60 seconds."
+    />
+    <meta property="og:title" content="Moshify... " />
+    <meta property="og:description" content="Moshify... " />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://" />
+    <title>Moshify - Go online for just $9</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,13 +23,16 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
+
   <body>
     <header>
-      <nav class="nav collapsible collapsible_expanded">
+      <nav class="nav collapsible">
         <a class="nav_brand" href="#"><img src="/images/logo.svg" alt="" /></a>
+
         <svg class="icon icon_white nav_toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
+
         <ul class="list collapsible_content nav_list">
           <li class="nav_item"><a href="#">Hosting</a></li>
           <li class="nav_item"><a href="#">VPS</a></li>
@@ -71,7 +82,7 @@
         />
         <button class="button button_accent">
           <svg class="icon icon_white button_icon">
-            <use xlink:href="images/sprite.svg#search"></use></svg
+            <use href="images/sprite.svg#search"></use></svg
           >Search
         </button>
       </div>
@@ -170,7 +181,7 @@
         <div class="feature_content" data-aos="fade-right">
           <span class="icon_container">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature_heading">Super Easy to use</h3>
@@ -197,7 +208,7 @@
         <div class="feature_content" data-aos="fade-left">
           <span class="icon_container">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature_heading">Simply fast websites</h3>
@@ -224,7 +235,7 @@
         <div class="feature_content" data-aos="fade-right">
           <span class="icon_container">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#settings"></use>
+              <use href="images/sprite.svg#settings"></use>
             </svg>
           </span>
           <h3 class="feature_heading">Wordpress made easy</h3>
@@ -251,7 +262,7 @@
         <div class="feature_content" data-aos="fade-left">
           <span class="icon_container">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#clock"></use>
+              <use href="images/sprite.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature_heading">24/7 Expert support</h3>
@@ -297,7 +308,7 @@
             <div class="media">
               <div class="media_icon">
                 <svg class="icon icon_primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media_body">
@@ -314,7 +325,7 @@
             <div class="media">
               <div class="media_icon">
                 <svg class="icon icon_primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media_body">
@@ -331,7 +342,7 @@
             <div class="media">
               <div class="media_icon">
                 <svg class="icon icon_primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media_body">
@@ -362,7 +373,7 @@
               <img src="/images/testimonial.jpg" alt="A happy man" />
               <span class="icon_container icon_container-accent">
                 <svg class="icon icon_white">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
+                  <use href="images/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -376,7 +387,7 @@
                 <div class="media">
                   <div class="media_icon">
                     <svg class="icon icon_primary quote_line">
-                      <use xlink:href="images/sprite.svg#line"></use>
+                      <use href="images/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media_body">
@@ -410,13 +421,13 @@
 
     <footer class="block block_dark footer">
       <div class="container grid footer_sections" data-aos="zoom-in">
-        <section class="collapsible collapsible_expanded footer_section">
-          <header class="collapsible_header">
+        <section class="collapsible footer_section">
+          <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Products</h2>
             <svg class="icon icon_white collapsible_icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible_content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -427,13 +438,13 @@
             </ul>
           </div>
         </section>
-        <section class="collapsible collapsible_expanded footer_section">
-          <header class="collapsible_header">
+        <section class="collapsible footer_section">
+          <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Company</h2>
             <svg class="icon icon_white collapsible_icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible_content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -446,13 +457,13 @@
             </ul>
           </div>
         </section>
-        <section class="collapsible collapsible_expanded footer_section">
-          <header class="collapsible_header">
+        <section class="collapsible footer_section">
+          <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Support</h2>
             <svg class="icon icon_white collapsible_icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible_content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -464,13 +475,13 @@
             </ul>
           </div>
         </section>
-        <section class="collapsible collapsible_expanded footer_section">
-          <header class="collapsible_header">
+        <section class="collapsible footer_section">
+          <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Domains</h2>
             <svg class="icon icon_white collapsible_icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible_content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -481,13 +492,14 @@
             </ul>
           </div>
         </section>
-        <section class="footer_image">
+        <div class="footer_image">
           <img src="/images/logo.svg" alt="" />
           <p class="footer_copyright">Copyright © 2020 Mosh</p>
-        </section>
+        </div>
       </div>
     </footer>
-    <script src="/js/main.js"></script>
+
+    <script src="./js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
