--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <header>
       <nav class="nav collapsible">
         <a class="nav_brand" href="#"><img src="/images/logo.svg" alt="" /></a>
-        <svg class="icon icon_white nav_toggler">
-          <use href="images/sprite.svg#menu"></use>
-        </svg>
+        <img
+          src="/icons/menu.svg"
+          alt=""
+          class="icon icon_white-img nav_toggler"
+        />
         <ul class="list collapsible_content nav_list">
           <li class="nav_item"><a href="#">Hosting</a></li>
           <li class="nav_item"><a href="#">VPS</a></li>
@@ -178,9 +180,7 @@
       <article class="grid grid_1x2 feature">
         <div class="feature_content" data-aos="fade-right">
           <span class="icon_container">
-            <svg class="icon icon_primary">
-              <use href="images/sprite.svg#easy"></use>
-            </svg>
+            <img src="/icons/easy.svg" alt="" class="icon icon_primary-img" />
           </span>
           <h3 class="feature_heading">Super Easy to use</h3>
           <p>
@@ -205,9 +205,11 @@
       <article class="grid grid_1x2 feature">
         <div class="feature_content" data-aos="fade-left">
           <span class="icon_container">
-            <svg class="icon icon_primary">
-              <use href="images/sprite.svg#computer"></use>
-            </svg>
+            <img
+              src="/icons/computer.svg"
+              alt=""
+              class="icon icon_primary-img"
+            />
           </span>
           <h3 class="feature_heading">Simply fast websites</h3>
           <p>
@@ -232,9 +234,11 @@
       <article class="grid grid_1x2 feature">
         <div class="feature_content" data-aos="fade-right">
           <span class="icon_container">
-            <svg class="icon icon_primary">
-              <use href="images/sprite.svg#settings"></use>
-            </svg>
+            <img
+              src="/icons/settings.svg"
+              alt=""
+              class="icon icon_primary-img"
+            />
           </span>
           <h3 class="feature_heading">Wordpress made easy</h3>
           <p>
@@ -259,9 +263,7 @@
       <article class="grid grid_1x2 feature">
         <div class="feature_content" data-aos="fade-left">
           <span class="icon_container">
-            <svg class="icon icon_primary">
-              <use href="images/sprite.svg#clock"></use>
-            </svg>
+            <img src="/icons/clock.svg" alt="" class="icon icon_primary-img" />
           </span>
           <h3 class="feature_heading">24/7 Expert support</h3>
           <p>
@@ -305,9 +307,11 @@
           <li>
             <div class="media">
               <div class="media_icon">
-                <svg class="icon icon_primary">
-                  <use href="images/sprite.svg#snap"></use>
-                </svg>
+                <img
+                  src="/icons/snap.svg"
+                  alt=""
+                  class="icon icon_primary-img"
+                />
               </div>
               <div class="media_body">
                 <h3 class="media_title">Easy start & Managed Updates</h3>
@@ -322,9 +326,11 @@
           <li>
             <div class="media">
               <div class="media_icon">
-                <svg class="icon icon_primary">
-                  <use href="images/sprite.svg#growth"></use>
-                </svg>
+                <img
+                  src="/icons/growth.svg"
+                  alt=""
+                  class="icon icon_primary-img"
+                />
               </div>
               <div class="media_body">
                 <h3 class="media_title">Staging Git & WP-CLI</h3>
@@ -339,9 +345,11 @@
           <li>
             <div class="media">
               <div class="media_icon">
-                <svg class="icon icon_primary">
-                  <use href="images/sprite.svg#wordpress"></use>
-                </svg>
+                <img
+                  src="/icons/computer.svg"
+                  alt=""
+                  class="icon icon_primary-img"
+                />
               </div>
               <div class="media_body">
                 <h3 class="media_title">Dynamic caching & more</h3>
@@ -370,9 +378,11 @@
             <div class="testimonial_images">
               <img src="/images/testimonial.jpg" alt="A happy man" />
               <span class="icon_container icon_container-accent">
-                <svg class="icon icon_white">
-                  <use href="images/sprite.svg#quotes"></use>
-                </svg>
+                <img
+                  src="/icons/quotes.svg"
+                  alt=""
+                  class="icon icon_white-img"
+                />
               </span>
             </div>
             <blockquote class="quote">
