--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
           placeholder="Enter domain name here..."
         />
         <button class="button button_accent">
-          <svg class="icon icon_white button_icon">
-            <use href="images/sprite.svg#search"></use></svg
-          >Search
+          <img class="button_icon" src="/icons/search.svg" alt="" />
+          Search
         </button>
       </div>
       <ul class="list block_domain-prices">
@@ -394,9 +393,11 @@
               <footer>
                 <div class="media">
                   <div class="media_icon">
-                    <svg class="icon icon_primary quote_line">
-                      <use href="images/sprite.svg#line"></use>
-                    </svg>
+                    <img
+                      src="/icons/line.svg"
+                      alt=""
+                      class="icon icon_primary-img quote_line"
+                    />
                   </div>
                   <div class="media_body">
                     <h3 class="media_title quote_author">John Smith</h3>
@@ -432,9 +433,11 @@
         <section class="collapsible footer_section">
           <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Products</h2>
-            <svg class="icon icon_white collapsible_icon">
-              <use href="images/sprite.svg#chevron"></use>
-            </svg>
+            <img
+              src="/icons/chevron.svg"
+              class="icon icon_white collapsible_icon"
+              alt=""
+            />
           </div>
           <div class="collapsible_content">
             <ul class="list">
@@ -449,9 +452,11 @@
         <section class="collapsible footer_section">
           <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Company</h2>
-            <svg class="icon icon_white collapsible_icon">
-              <use href="images/sprite.svg#chevron"></use>
-            </svg>
+            <img
+              src="/icons/chevron.svg"
+              class="icon icon_white collapsible_icon"
+              alt=""
+            />
           </div>
           <div class="collapsible_content">
             <ul class="list">
@@ -468,9 +473,11 @@
         <section class="collapsible footer_section">
           <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Support</h2>
-            <svg class="icon icon_white collapsible_icon">
-              <use href="images/sprite.svg#chevron"></use>
-            </svg>
+            <img
+              src="/icons/chevron.svg"
+              class="icon icon_white collapsible_icon"
+              alt=""
+            />
           </div>
           <div class="collapsible_content">
             <ul class="list">
@@ -486,9 +493,11 @@
         <section class="collapsible footer_section">
           <div class="collapsible_header">
             <h2 class="collapsible_heading footer_heading">Domains</h2>
-            <svg class="icon icon_white collapsible_icon">
-              <use href="images/sprite.svg#chevron"></use>
-            </svg>
+            <img
+              src="/icons/chevron.svg"
+              class="icon icon_white collapsible_icon"
+              alt=""
+            />
           </div>
           <div class="collapsible_content">
             <ul class="list">
