--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav_brand" href="#"><img src="/images/logo.svg" alt="" /></a>
+        <a aria-label="Moshify" class="nav_brand" href="#"
+          ><img src="/images/logo.svg" alt=""
+        /></a>
         <img
           src="/icons/menu.svg"
           alt=""
@@ -77,6 +79,7 @@
       <div class="input_group">
         <input
           class="input"
+          aria-label="Domain"
           type="text"
           placeholder="Enter domain name here..."
         />
